# palmer-shop-backend

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  events.py  logging.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/: events.py
app/models/: common.py
app/models/domain/: books.py  rwmodel.py  users.py
app/services/: security.py
tests/: test_palmer_shop_backend.py
