[tool.poetry]
name = "palmer-shop-backend"
version = "0.1.0"
description = ""
authors = ["Nguyen Huu Phuong <frank.phuongnguyen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
bcrypt = "^3.2.2"
passlib = "^1.7.4"
fastapi = "^0.78.0"
loguru = "^0.6.0"
asyncpg = "^0.25.0"

[tool.poetry.scripts]
start = " uvicorn app.main:app --reload"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
